Fixed spacing on code blocks

--- a/src/site/resources/css/override.css
+++ b/src/site/resources/css/override.css
@@ -6,6 +6,9 @@
   padding-right: 0;
   padding-left: 0;
 }
+.code_responsive { 
+  margin-bottom: 10px;
+}
 div.alert {
   padding: 15px 15px 15px;
 }
